--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-mustache": "^1.0.4",
     "express-session": "^1.17.2",
     "mustache-express": "^1.3.2",
+    "nodemon": "^2.0.15",
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2"
   }
